force-app/main/default/objects/Standard_Classes_and_Goods_Specification__mdt/Standard_Classes_and_Goods_Specification__mdt.object-meta.xml
<CustomObject>
    <label>Standard Classes and Goods Specification</label>
    <pluralLabel>Standard Classes and Goods Specification</pluralLabel>
</CustomObject>