force-app/main/default/objects/Standard_Classes_and_Goods_Specification__mdt/fields/Languages__c.field-meta.xml
<CustomField>
    <fullName>Languages__c</fullName>
    <label>Languages</label>
    <length>20</length>
    <type>Text</type>
</CustomField>