force-app/main/default/objects/Standard_Classes_and_Goods_Specification__mdt/listViews/New_View.listView-meta.xml
<ListView>
    <fullName>New_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Class__c</columns>
    <columns>Languages__c</columns>
    <columns>Specification__c</columns>
    <filterScope>Everything</filterScope>
    <label>New View</label>
</ListView>